--- a/client/src/views/Signup/Signup.css
+++ b/client/src/views/Signup/Signup.css
@@ -14,21 +14,21 @@
     border-radius: 8px;
     border: 1px solid grey;
     font-size: 18px;
-    text-align: center;
+    
     padding-left: 10px;
-    margin-left: 40px;
     border: 2.8px solid darkgreen;
 }
 .signup-button{
     font-size: 20px;
-    width:200px;
+    border-radius: 30px;
+    width:220px;
     color: white;
     cursor: pointer;
     margin: 10px;
-    color:orangered;
-    font-weight: bold;
-    border: 1px solid orangered;
-    background-color: white;
+    font-weight: 500;
+    font-size: 25px;
+    border: 1px solid green;
+    background-color: green;
     display: block;
     margin-left: auto;
     margin-right: auto;
