--- a/client/src/views/Signup/Signup.css
+++ b/client/src/views/Signup/Signup.css
@@ -8,7 +8,8 @@
     box-shadow: 0 14px 20px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 .row{
-    background-color: #101110;
+    background-color: white;
+    color:#101110;
 }
 .user-input{
     display: block;
@@ -64,11 +65,11 @@
     color:orangered;
 }
 .signup-left-row-heading{
-    color:white;
+    color:black;
     font-family: sans-serif;
 }
 .description-left-row-sgn{
-    color:white;
+    color:black;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 20px;
 }
@@ -77,5 +78,5 @@
     font-weight: bold;
 }
 .image-sgn-leftrow{
-    height: 450px;
+    height: 330px;
 }
